openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openshift-demo
  name: openshift-demo
spec:
  type: NodePort
  ports:
    - name: 80-tcp
      targetPort: 80
      protocol: TCP
  selector:
    app: openshift-demo
