openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: openshift-demo
  name: openshift-demo
spec:
  host: openshift-demo-user1test.apps.g66666.hk.my-demo.tech
  port:
    targetPort: 80
  to:
    kind: Service
    name: openshift-demo
    weight: 100
